@@ -4,7 +4,6 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.io.UncheckedIOException;
@@ -47,233 +46,192 @@ public class FileUtilsTest {
         }
     }
 
-    private Path createTempFileWithContent(String prefix, String suffix, String content) throws IOException {
-        Path tempFile = Files.createTempFile(prefix, suffix);
-        Files.writeString(tempFile, content);
+    @Getter
+    private static class TempFile implements AutoCloseable {
+        private final Path path;
 
-        return tempFile;
-    }
+        TempFile(String prefix, String suffix) {
+            try {
+                this.path = Files.createTempFile(prefix, suffix);
+            } catch (IOException e) {
+                throw new UncheckedIOException("Failed to create temp file with prefix '%s' and suffix '%s'".formatted(prefix, suffix), e);
+            }
+        }
 
-    private void deleteTempFile(Path file) {
-        assertDoesNotThrow(() -> Files.delete(file), "Failed to delete temp file: " + file);
-    }
+        public void write(String content) {
+            try {
+                Files.writeString(path, content);
+            } catch (IOException e) {
+                throw new UncheckedIOException("Failed to write to temp file: " + path, e);
+            }
+        }
 
-    private void deleteTempFileIfExists(String prefix, String suffix) throws IOException {
-        try {
-            Files.deleteIfExists(Path.of(prefix + suffix));
-        } catch (IOException e) {
-            throw new IOException("Failed to delete existing temp file", e);
+        @Override
+        public void close() {
+            try {
+                Files.deleteIfExists(path);
+            } catch (IOException e) {
+                throw new UncheckedIOException("Failed to delete existing temp file: " + path, e);
+            }
         }
     }
 
     @Test
-    void testEmptyFileThrowsIOException() throws IOException {
-        Path emptyFile = createTempFileWithContent("empty_file", ".test", "");
-        try {
-            UncheckedIOException exception = assertThrows(
-                    UncheckedIOException.class,
-                    () -> FileUtils.loadFileToMap(emptyFile)
-            );
-
-            assertTrue(exception.getMessage().contains("File is empty"));
-        } finally {
-            deleteTempFile(emptyFile);
+    void testEmptyFileThrowsException() {
+        try (TempFile emptyFile = new TempFile("empty_file", ".test")) {
+            emptyFile.write("");
+            assertTrue(assertThrows(UncheckedIOException.class,
+                    () -> FileUtils.loadFileToMap(emptyFile.getPath())).getMessage().contains("File is empty"));
         }
     }
 
     @Test
-    void testValidJsonFileReturnsExpectedMap() throws IOException {
-        Path tempJsonFile = createTempFileWithContent("test", ".json", """
-        {
-          "key1": "value1",
-          "key2": {
-            "nestedKey": "nestedValue"
-          }
-        }
-        """);
-        try {
-            LinkedHashMap<String, Object> result = FileUtils.loadFileToMap(tempJsonFile);
-
-            assertEquals(2, result.size());
+    void testValidJsonFileReturnsExpectedMap() {
+        try (TempFile tempJsonFile = new TempFile("test", ".json")) {
+            tempJsonFile.write("""
+                    {
+                      "key1": "value1",
+                      "key2": {
+                        "nestedKey": "nestedValue"
+                      }
+                    }
+                    """);
+            var result = FileUtils.loadFileToMap(tempJsonFile.getPath());
             assertEquals("value1", result.get("key1"));
-            assertEquals("nestedValue", ((LinkedHashMap<?, ?>) result.get("key2")).get("nestedKey"));
-        } finally {
-            deleteTempFile(tempJsonFile);
+            assertEquals("nestedValue", ((Map<?, ?>) result.get("key2")).get("nestedKey"));
         }
     }
 
     @Test
-    void testValidYamlFileReturnsExpectedMap() throws IOException {
-        Path tempYamlFile = createTempFileWithContent("test", ".yaml", """
-        key1: value1
-        key2:
-          nestedKey: nestedValue
-        """);
-        try {
-            LinkedHashMap<String, Object> result = FileUtils.loadFileToMap(tempYamlFile);
-
-            assertEquals(2, result.size());
+    void testValidYamlFileReturnsExpectedMap() {
+        try (TempFile tempYamlFile = new TempFile("test", ".yaml")) {
+            tempYamlFile.write("""
+                    key1: value1
+                    key2:
+                      nestedKey: nestedValue
+                    """);
+            var result = FileUtils.loadFileToMap(tempYamlFile.getPath());
             assertEquals("value1", result.get("key1"));
-            assertEquals("nestedValue", ((LinkedHashMap<?, ?>) result.get("key2")).get("nestedKey"));
-        } finally {
-            deleteTempFile(tempYamlFile);
+            assertEquals("nestedValue", ((Map<?, ?>) result.get("key2")).get("nestedKey"));
         }
     }
 
     @Test
-    void testFileWithoutExtensionThrowsException() throws IOException {
-        Path noExtTempFile = createTempFileWithContent("test", "", "key1: value1");
-        try {
-            IllegalArgumentException exception = assertThrows(
-                    IllegalArgumentException.class, () -> FileUtils.loadFileToMap(noExtTempFile));
-
-            assertTrue(exception.getMessage().contains("File does not have a valid extension"));
-        } finally {
-            deleteTempFile(noExtTempFile);
+    void testFileWithoutExtensionThrowsException() {
+        try (TempFile noExtFile = new TempFile("test", "")) {
+            noExtFile.write("key1: value1");
+            assertTrue(assertThrows(IllegalArgumentException.class,
+                    () -> FileUtils.loadFileToMap(noExtFile.getPath())).getMessage().contains("File does not have a valid extension"));
         }
     }
 
     @Test
-    void testFileWithEndingDotThrowsException() throws IOException {
-        Path endDotTempFile = createTempFileWithContent("test", ".", "key1: value1");
-        try {
-            IllegalArgumentException exception = assertThrows(
-                    IllegalArgumentException.class,
-                    () -> FileUtils.loadFileToMap(endDotTempFile)
-            );
-
-            assertTrue(exception.getMessage().contains("File does not have a valid extension"));
-        } finally {
-            deleteTempFile(endDotTempFile);
+    void testFileWithEndingDotThrowsException() {
+        try (TempFile endDotFile = new TempFile("test", ".")) {
+            endDotFile.write("key1: value1");
+            assertTrue(assertThrows(IllegalArgumentException.class,
+                    () -> FileUtils.loadFileToMap(endDotFile.getPath())).getMessage().contains("File does not have a valid extension"));
         }
     }
 
     @Test
-    void testUnsupportedFileFormatThrowsException() throws IOException {
-        Path tempTxtFile = createTempFileWithContent("test", ".txt", "key1: value1");
-        try {
-            IllegalArgumentException exception = assertThrows(
-                    IllegalArgumentException.class, () -> FileUtils.loadFileToMap(tempTxtFile));
-
-            assertTrue(exception.getMessage().contains("Unsupported extension"));
-        } finally {
-            deleteTempFile(tempTxtFile);
+    void testUnsupportedFileFormatThrowsException() {
+        try (TempFile txtFile = new TempFile("test", ".txt")) {
+            txtFile.write("key1: value1");
+            assertTrue(assertThrows(IllegalArgumentException.class,
+                    () -> FileUtils.loadFileToMap(txtFile.getPath())).getMessage().contains("Unsupported extension"));
         }
     }
 
     @Test
     void testNonExistentFileThrowsException() {
-        Path nonExistentFilePath = Path.of("/path/to/nonexistent/file.json");
-
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class, () -> FileUtils.loadFileToMap(nonExistentFilePath));
-
-        assertTrue(exception.getMessage().contains("Nonexisting file path provided"));
+        Path nonExistent = Path.of("/path/to/nonexistent/file.json");
+        assertTrue(assertThrows(IllegalArgumentException.class,
+                () -> FileUtils.loadFileToMap(nonExistent)).getMessage().contains("Nonexistent file path provided"));
     }
 
     @Test
-    void testWriteJsonFileFromMap() throws IOException {
-        LinkedHashMap<String, Object> data = new LinkedHashMap<>();
+    void testWriteJsonFileFromMap() {
+        var data = new LinkedHashMap<String, Object>();
         data.put("key1", "value1");
         data.put("key2", Map.of("nestedKey", "nestedValue"));
 
-        Path tempJsonFile = Files.createTempFile("write_test", ".json");
-        try {
-            FileUtils.writeMapToFile(tempJsonFile, data);
-
-            assertEquals(data, FileUtils.loadFileToMap(tempJsonFile));
-        } finally {
-            deleteTempFile(tempJsonFile);
+        try (TempFile tempJsonFile = new TempFile("write_test", ".json")) {
+            FileUtils.writeMapToFile(tempJsonFile.getPath(), data);
+            assertEquals(data, FileUtils.loadFileToMap(tempJsonFile.getPath()));
         }
     }
 
     @Test
-    void testWriteYamlFileFromMap() throws IOException {
-        LinkedHashMap<String, Object> data = new LinkedHashMap<>();
+    void testWriteYamlFileFromMap() {
+        var data = new LinkedHashMap<String, Object>();
         data.put("key1", "value1");
         data.put("key2", Map.of("nestedKey", "nestedValue"));
 
-        Path tempYamlFile = Files.createTempFile("write_test", ".yaml");
-        try {
-            FileUtils.writeMapToFile(tempYamlFile, data);
-
-            assertEquals(data, FileUtils.loadFileToMap(tempYamlFile));
-        } finally {
-            deleteTempFile(tempYamlFile);
+        try (TempFile tempYamlFile = new TempFile("write_test", ".yaml")) {
+            FileUtils.writeMapToFile(tempYamlFile.getPath(), data);
+            assertEquals(data, FileUtils.loadFileToMap(tempYamlFile.getPath()));
         }
     }
 
     @Test
-    void testWriteUnsupportedFormatThrowsException() throws IOException {
-        Path tempTxtFile = Files.createTempFile("write_test", ".txt");
-        try {
-            LinkedHashMap<String, Object> data = new LinkedHashMap<>();
+    void testWriteUnsupportedFormatThrowsException() {
+        try (TempFile tempTxtFile = new TempFile("write_test", ".txt")) {
+            var data = new LinkedHashMap<String, Object>();
             data.put("key", "value");
 
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
-                    FileUtils.writeMapToFile(tempTxtFile, data));
-
-            assertTrue(ex.getMessage().contains("Unsupported extension"));
-        } finally {
-            deleteTempFile(tempTxtFile);
+            assertTrue(assertThrows(IllegalArgumentException.class,
+                    () -> FileUtils.writeMapToFile(tempTxtFile.getPath(), data)).getMessage().contains("Unsupported extension"));
         }
     }
 
     @Test
-    void testLoadJsonFileToObject() throws IOException {
-        Path tempJsonFile = createTempFileWithContent("test", ".json", """
-        {
-          "name": "John",
-          "version": 1
-        }
-        """);
-        try {
-            final TestConfig expectedConfig = new TestConfig("John", 1);
-
-            TestConfig actualConfig = FileUtils.loadFileToObject(tempJsonFile, TestConfig.class);
-
-            Assertions.assertNotNull(actualConfig);
-            Assertions.assertEquals(expectedConfig, actualConfig);
-        } finally {
-            deleteTempFile(tempJsonFile);
+    void testLoadJsonFileToObject() {
+        try (TempFile tempJsonFile = new TempFile("test", ".json")) {
+            tempJsonFile.write("""
+                    {
+                      "name": "John",
+                      "version": 1
+                    }
+                    """);
+            var actual = FileUtils.loadFileToObject(tempJsonFile.getPath(), TestConfig.class);
+            assertNotNull(actual);
+            assertEquals(new TestConfig("John", 1), actual);
         }
     }
 
     @Test
-    void testLoadYamlFileToObject() throws IOException {
-        Path tempYamlFile = createTempFileWithContent("test", ".yaml", """
-            name: "John"
-            version: 1
-            """);
-        try {
-            TestConfig actualConfig = FileUtils.loadFileToObject(tempYamlFile, TestConfig.class);
-
-            Assertions.assertNotNull(actualConfig);
-            Assertions.assertEquals(new TestConfig("John", 1), actualConfig);
-        } finally {
-            deleteTempFile(tempYamlFile);
+    void testLoadYamlFileToObject() {
+        try (TempFile tempYamlFile = new TempFile("test", ".yaml")) {
+            tempYamlFile.write("""
+                    name: "John"
+                    version: 1
+                    """);
+            var actual = FileUtils.loadFileToObject(tempYamlFile.getPath(), TestConfig.class);
+            assertNotNull(actual);
+            assertEquals(new TestConfig("John", 1), actual);
         }
     }
 
     @Test
-    void testLoadFileToObjectNegatives() throws IOException {
-        assertThrows(UncheckedIOException.class, () -> FileUtils.loadFileToObject(Paths.get(""), TestConfig.class));
-        Assertions.assertThrows(IllegalArgumentException.class, () -> FileUtils.loadFileToObject(Path.of("Wrong_name"), TestConfig.class));
+    void testLoadFileToObjectNegatives() {
+        assertThrows(UncheckedIOException.class,
+                () -> FileUtils.loadFileToObject(Paths.get(""), TestConfig.class));
+        assertThrows(IllegalArgumentException.class,
+                () -> FileUtils.loadFileToObject(Path.of("Wrong_name"), TestConfig.class));
 
-        final Path wrongExtensionFile = createTempFileWithContent("wrong", ".ext", "dummy values");
-        Assertions.assertThrows(IllegalArgumentException.class, () -> FileUtils.loadFileToObject(wrongExtensionFile, TestConfig.class));
-        deleteTempFileIfExists("wrong", ".ext");
+        try (TempFile wrongExtFile = new TempFile("wrong", ".ext")) {
+            wrongExtFile.write("dummy values");
+            assertThrows(IllegalArgumentException.class,
+                    () -> FileUtils.loadFileToObject(wrongExtFile.getPath(), TestConfig.class));
+        }
 
-        final Path emptyJsonFile = createTempFileWithContent("empty_file", ".json", "");
-        Assertions.assertThrows(UncheckedIOException.class, () -> FileUtils.loadFileToObject(emptyJsonFile, TestConfig.class));
-        deleteTempFileIfExists("empty_file", ".json");
-
-        final Path emptyYamlFile1 = createTempFileWithContent("empty_file", ".yaml", "");
-        Assertions.assertThrows(UncheckedIOException.class, () -> FileUtils.loadFileToObject(emptyYamlFile1, TestConfig.class));
-        deleteTempFileIfExists("empty_file", ".yaml");
-
-        final Path emptyYamlFile2 = createTempFileWithContent("empty_file", ".yml", "");
-        Assertions.assertThrows(UncheckedIOException.class, () -> FileUtils.loadFileToObject(emptyYamlFile2, TestConfig.class));
-        deleteTempFileIfExists("empty_file", ".yml");
+        for (String ext : new String[]{".json", ".yaml", ".yml"}) {
+            try (TempFile emptyFile = new TempFile("empty_file", ext)) {
+                emptyFile.write("");
+                assertThrows(UncheckedIOException.class,
+                        () -> FileUtils.loadFileToObject(emptyFile.getPath(), TestConfig.class));
+            }
+        }
     }
 }
